parser.output
State 57 conflicts: 24 shift/reduce
State 58 conflicts: 24 shift/reduce
State 86 conflicts: 22 shift/reduce
State 94 conflicts: 42 shift/reduce
State 126 conflicts: 22 shift/reduce
State 131 conflicts: 2 shift/reduce
State 134 conflicts: 2 shift/reduce
State 141 conflicts: 24 reduce/reduce
State 142 conflicts: 24 reduce/reduce
State 143 conflicts: 24 reduce/reduce
State 144 conflicts: 24 reduce/reduce
State 148 conflicts: 22 shift/reduce
State 151 conflicts: 22 shift/reduce
State 160 conflicts: 23 shift/reduce
State 163 conflicts: 12 shift/reduce
State 185 conflicts: 12 shift/reduce
State 202 conflicts: 22 shift/reduce
State 208 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | letdef program
    3        | typedef program

    4 letdef: "let" def muldef
    5       | "let" "rec" def muldef

    6 muldef: %empty
    7       | "and" def muldef

    8 def: T_id mulpar "=" expr
    9    | T_id mulpar ":" type "=" expr
   10    | "mutable" T_id
   11    | "mutable" T_id ":" type
   12    | "mutable" T_id "[" expr mulexpr "]"
   13    | "mutable" T_id "[" expr mulexpr "]" ":" type

   14 mulpar: %empty
   15       | par mulpar

   16 mulexpr: %empty
   17        | "," expr mulexpr

   18 typedef: "type" tdef multdef

   19 multdef: %empty
   20        | "and" tdef multdef

   21 tdef: T_id "=" constr mulconstr

   22 mulconstr: %empty
   23          | "|" constr mulconstr

   24 constr: T_Id
   25       | T_Id "of" type multype

   26 multype: %empty
   27        | type multype

   28 par: T_id
   29    | "(" T_id ":" type ")"

   30 type: "unit"
   31     | "int"
   32     | "char"
   33     | "bool"
   34     | "float"
   35     | "(" type ")"
   36     | type "->" type
   37     | type "ref"
   38     | "array" "of" type
   39     | "array" "[" "*" muldim "]" "of" type
   40     | T_id

   41 muldim: %empty
   42       | "," "*" muldim

   43 expr: T_integer
   44     | T_real
   45     | T_character
   46     | T_string
   47     | "true"
   48     | "false"
   49     | "(" ")"
   50     | "(" expr ")"
   51     | unop expr
   52     | expr binop expr
   53     | T_id mulexpr2
   54     | T_Id mulexpr2
   55     | T_id "[" expr mulexpr "]"
   56     | "dim" T_id
   57     | "dim" T_integer T_id
   58     | "new" type
   59     | "delete" expr
   60     | letdef "in" expr
   61     | "begin" expr "end"
   62     | "if" expr "then" expr
   63     | "if" expr "then" expr "else" expr
   64     | "while" expr "do" expr "done"
   65     | "for" T_id "=" expr "to" expr "do" expr "done"
   66     | "for" T_id "=" expr "downto" expr "do" expr "done"
   67     | "match" expr "with" clause mulclause "end"

   68 mulexpr2: %empty
   69         | expr mulexpr2

   70 mulclause: %empty
   71          | "|" clause mulclause

   72 unop: '+'
   73     | '-'
   74     | "+."
   75     | "-."
   76     | '!'
   77     | "not"

   78 binop: '+'
   79      | '-'
   80      | '*'
   81      | '/'
   82      | "+."
   83      | "-."
   84      | "*."
   85      | "/."
   86      | "mod"
   87      | "**"
   88      | '='
   89      | "<>"
   90      | '<'
   91      | '>'
   92      | "<="
   93      | ">="
   94      | "=="
   95      | "!="
   96      | "&&"
   97      | "||"
   98      | ';'
   99      | ":="

  100 clause: pattern "->" expr

  101 pattern: T_integer
  102        | '+' T_integer
  103        | '-' T_integer
  104        | T_real
  105        | "+." T_real
  106        | "-." T_real
  107        | T_character
  108        | "true"
  109        | "false"
  110        | T_id
  111        | "(" pattern ")"
  112        | T_Id mulpat

  113 mulpat: %empty
  114       | pattern mulpat


Terminals, with rules where they appear

$end (0) 0
'!' (33) 76
'*' (42) 80
'+' (43) 72 78 102
'-' (45) 73 79 103
'/' (47) 81
';' (59) 98
'<' (60) 90
'=' (61) 88
'>' (62) 91
error (256)
"and" (258) 7 20
"array" (259) 38 39
"begin" (260) 61
"bool" (261) 33
"char" (262) 32
"delete" (263) 59
"dim" (264) 56 57
"do" (265) 64 65 66
"done" (266) 64 65 66
"downto" (267) 66
"else" (268) 63
"end" (269) 61 67
"false" (270) 48 109
"float" (271) 34
"for" (272) 65 66
"if" (273) 62 63
"in" (274) 60
"int" (275) 31
"let" (276) 4 5
"match" (277) 67
"mod" (278) 86
"mutable" (279) 10 11 12 13
"new" (280) 58
"not" (281) 77
"of" (282) 25 38 39
"rec" (283) 5
"ref" (284) 37
"then" (285) 62 63
"to" (286) 65
"true" (287) 47 108
"type" (288) 18
"unit" (289) 30
"while" (290) 64
"with" (291) 67
T_Id (292) 24 25 54 112
T_id (293) 8 9 10 11 12 13 21 28 29 40 53 55 56 57 65 66 110
T_integer (294) 43 57 101 102 103
T_real (295) 44 104 105 106
T_character (296) 45 107
T_string (297) 46
"*." (298) 84
"/." (299) 85
"+." (300) 74 82 105
"-." (301) 75 83 106
"<>" (302) 89
"<=" (303) 92
">=" (304) 93
"==" (305) 94
"!=" (306) 95
"&&" (307) 96
"||" (308) 97
"**" (309) 87
"=" (310) 8 9 21 65 66
":" (311) 9 11 13 29
"[" (312) 12 13 39 55
"]" (313) 12 13 39 55
"," (314) 17 42
"|" (315) 23 71
"(" (316) 29 35 49 50 111
")" (317) 29 35 49 50 111
"->" (318) 36 100
"*" (319) 39 42
":=" (320) 99


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
program (76)
    on left: 1 2 3, on right: 0 2 3
letdef (77)
    on left: 4 5, on right: 2 60
muldef (78)
    on left: 6 7, on right: 4 5 7
def (79)
    on left: 8 9 10 11 12 13, on right: 4 5 7
mulpar (80)
    on left: 14 15, on right: 8 9 15
mulexpr (81)
    on left: 16 17, on right: 12 13 17 55
typedef (82)
    on left: 18, on right: 3
multdef (83)
    on left: 19 20, on right: 18 20
tdef (84)
    on left: 21, on right: 18 20
mulconstr (85)
    on left: 22 23, on right: 21 23
constr (86)
    on left: 24 25, on right: 21 23
multype (87)
    on left: 26 27, on right: 25 27
par (88)
    on left: 28 29, on right: 15
type (89)
    on left: 30 31 32 33 34 35 36 37 38 39 40, on right: 9 11 13 25
    27 29 35 36 37 38 39 58
muldim (90)
    on left: 41 42, on right: 39 42
expr (91)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67, on right: 8 9 12 13 17 50 51 52 55 59 60
    61 62 63 64 65 66 67 69 100
mulexpr2 (92)
    on left: 68 69, on right: 53 54 69
mulclause (93)
    on left: 70 71, on right: 67 71
unop (94)
    on left: 72 73 74 75 76 77, on right: 51
binop (95)
    on left: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    96 97 98 99, on right: 52
clause (96)
    on left: 100, on right: 67 71
pattern (97)
    on left: 101 102 103 104 105 106 107 108 109 110 111 112, on right:
    100 111 114
mulpat (98)
    on left: 113 114, on right: 112 114


State 0

    0 $accept: . program $end

    "let"   shift, and go to state 1
    "type"  shift, and go to state 2

    $default  reduce using rule 1 (program)

    program  go to state 3
    letdef   go to state 4
    typedef  go to state 5


State 1

    4 letdef: "let" . def muldef
    5       | "let" . "rec" def muldef

    "mutable"  shift, and go to state 6
    "rec"      shift, and go to state 7
    T_id       shift, and go to state 8

    def  go to state 9


State 2

   18 typedef: "type" . tdef multdef

    T_id  shift, and go to state 10

    tdef  go to state 11


State 3

    0 $accept: program . $end

    $end  shift, and go to state 12


State 4

    2 program: letdef . program

    "let"   shift, and go to state 1
    "type"  shift, and go to state 2

    $default  reduce using rule 1 (program)

    program  go to state 13
    letdef   go to state 4
    typedef  go to state 5


State 5

    3 program: typedef . program

    "let"   shift, and go to state 1
    "type"  shift, and go to state 2

    $default  reduce using rule 1 (program)

    program  go to state 14
    letdef   go to state 4
    typedef  go to state 5


State 6

   10 def: "mutable" . T_id
   11    | "mutable" . T_id ":" type
   12    | "mutable" . T_id "[" expr mulexpr "]"
   13    | "mutable" . T_id "[" expr mulexpr "]" ":" type

    T_id  shift, and go to state 15


State 7

    5 letdef: "let" "rec" . def muldef

    "mutable"  shift, and go to state 6
    T_id       shift, and go to state 8

    def  go to state 16


State 8

    8 def: T_id . mulpar "=" expr
    9    | T_id . mulpar ":" type "=" expr

    T_id  shift, and go to state 17
    "("   shift, and go to state 18

    $default  reduce using rule 14 (mulpar)

    mulpar  go to state 19
    par     go to state 20


State 9

    4 letdef: "let" def . muldef

    "and"  shift, and go to state 21

    $default  reduce using rule 6 (muldef)

    muldef  go to state 22


State 10

   21 tdef: T_id . "=" constr mulconstr

    "="  shift, and go to state 23


State 11

   18 typedef: "type" tdef . multdef

    "and"  shift, and go to state 24

    $default  reduce using rule 19 (multdef)

    multdef  go to state 25


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 program: letdef program .

    $default  reduce using rule 2 (program)


State 14

    3 program: typedef program .

    $default  reduce using rule 3 (program)


State 15

   10 def: "mutable" T_id .
   11    | "mutable" T_id . ":" type
   12    | "mutable" T_id . "[" expr mulexpr "]"
   13    | "mutable" T_id . "[" expr mulexpr "]" ":" type

    ":"  shift, and go to state 26
    "["  shift, and go to state 27

    $default  reduce using rule 10 (def)


State 16

    5 letdef: "let" "rec" def . muldef

    "and"  shift, and go to state 21

    $default  reduce using rule 6 (muldef)

    muldef  go to state 28


State 17

   28 par: T_id .

    $default  reduce using rule 28 (par)


State 18

   29 par: "(" . T_id ":" type ")"

    T_id  shift, and go to state 29


State 19

    8 def: T_id mulpar . "=" expr
    9    | T_id mulpar . ":" type "=" expr

    "="  shift, and go to state 30
    ":"  shift, and go to state 31


State 20

   15 mulpar: par . mulpar

    T_id  shift, and go to state 17
    "("   shift, and go to state 18

    $default  reduce using rule 14 (mulpar)

    mulpar  go to state 32
    par     go to state 20


State 21

    7 muldef: "and" . def muldef

    "mutable"  shift, and go to state 6
    T_id       shift, and go to state 8

    def  go to state 33


State 22

    4 letdef: "let" def muldef .

    $default  reduce using rule 4 (letdef)


State 23

   21 tdef: T_id "=" . constr mulconstr

    T_Id  shift, and go to state 34

    constr  go to state 35


State 24

   20 multdef: "and" . tdef multdef

    T_id  shift, and go to state 10

    tdef  go to state 36


State 25

   18 typedef: "type" tdef multdef .

    $default  reduce using rule 18 (typedef)


State 26

   11 def: "mutable" T_id ":" . type

    "array"  shift, and go to state 37
    "bool"   shift, and go to state 38
    "char"   shift, and go to state 39
    "float"  shift, and go to state 40
    "int"    shift, and go to state 41
    "unit"   shift, and go to state 42
    T_id     shift, and go to state 43
    "("      shift, and go to state 44

    type  go to state 45


State 27

   12 def: "mutable" T_id "[" . expr mulexpr "]"
   13    | "mutable" T_id "[" . expr mulexpr "]" ":" type

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 70
    unop    go to state 71


State 28

    5 letdef: "let" "rec" def muldef .

    $default  reduce using rule 5 (letdef)


State 29

   29 par: "(" T_id . ":" type ")"

    ":"  shift, and go to state 72


State 30

    8 def: T_id mulpar "=" . expr

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 73
    unop    go to state 71


State 31

    9 def: T_id mulpar ":" . type "=" expr

    "array"  shift, and go to state 37
    "bool"   shift, and go to state 38
    "char"   shift, and go to state 39
    "float"  shift, and go to state 40
    "int"    shift, and go to state 41
    "unit"   shift, and go to state 42
    T_id     shift, and go to state 43
    "("      shift, and go to state 44

    type  go to state 74


State 32

   15 mulpar: par mulpar .

    $default  reduce using rule 15 (mulpar)


State 33

    7 muldef: "and" def . muldef

    "and"  shift, and go to state 21

    $default  reduce using rule 6 (muldef)

    muldef  go to state 75


State 34

   24 constr: T_Id .
   25       | T_Id . "of" type multype

    "of"  shift, and go to state 76

    $default  reduce using rule 24 (constr)


State 35

   21 tdef: T_id "=" constr . mulconstr

    "|"  shift, and go to state 77

    $default  reduce using rule 22 (mulconstr)

    mulconstr  go to state 78


State 36

   20 multdef: "and" tdef . multdef

    "and"  shift, and go to state 24

    $default  reduce using rule 19 (multdef)

    multdef  go to state 79


State 37

   38 type: "array" . "of" type
   39     | "array" . "[" "*" muldim "]" "of" type

    "of"  shift, and go to state 80
    "["   shift, and go to state 81


State 38

   33 type: "bool" .

    $default  reduce using rule 33 (type)


State 39

   32 type: "char" .

    $default  reduce using rule 32 (type)


State 40

   34 type: "float" .

    $default  reduce using rule 34 (type)


State 41

   31 type: "int" .

    $default  reduce using rule 31 (type)


State 42

   30 type: "unit" .

    $default  reduce using rule 30 (type)


State 43

   40 type: T_id .

    $default  reduce using rule 40 (type)


State 44

   35 type: "(" . type ")"

    "array"  shift, and go to state 37
    "bool"   shift, and go to state 38
    "char"   shift, and go to state 39
    "float"  shift, and go to state 40
    "int"    shift, and go to state 41
    "unit"   shift, and go to state 42
    T_id     shift, and go to state 43
    "("      shift, and go to state 44

    type  go to state 82


State 45

   11 def: "mutable" T_id ":" type .
   36 type: type . "->" type
   37     | type . "ref"

    "ref"  shift, and go to state 83
    "->"   shift, and go to state 84

    $default  reduce using rule 11 (def)


State 46

   61 expr: "begin" . expr "end"

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 85
    unop    go to state 71


State 47

   59 expr: "delete" . expr

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 86
    unop    go to state 71


State 48

   56 expr: "dim" . T_id
   57     | "dim" . T_integer T_id

    T_id       shift, and go to state 87
    T_integer  shift, and go to state 88


State 49

   48 expr: "false" .

    $default  reduce using rule 48 (expr)


State 50

   65 expr: "for" . T_id "=" expr "to" expr "do" expr "done"
   66     | "for" . T_id "=" expr "downto" expr "do" expr "done"

    T_id  shift, and go to state 89


State 51

   62 expr: "if" . expr "then" expr
   63     | "if" . expr "then" expr "else" expr

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 90
    unop    go to state 71


State 52

   67 expr: "match" . expr "with" clause mulclause "end"

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 91
    unop    go to state 71


State 53

   58 expr: "new" . type

    "array"  shift, and go to state 37
    "bool"   shift, and go to state 38
    "char"   shift, and go to state 39
    "float"  shift, and go to state 40
    "int"    shift, and go to state 41
    "unit"   shift, and go to state 42
    T_id     shift, and go to state 43
    "("      shift, and go to state 44

    type  go to state 92


State 54

   77 unop: "not" .

    $default  reduce using rule 77 (unop)


State 55

   47 expr: "true" .

    $default  reduce using rule 47 (expr)


State 56

   64 expr: "while" . expr "do" expr "done"

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 93
    unop    go to state 71


State 57

   54 expr: T_Id . mulexpr2

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    "begin"      [reduce using rule 68 (mulexpr2)]
    "delete"     [reduce using rule 68 (mulexpr2)]
    "dim"        [reduce using rule 68 (mulexpr2)]
    "false"      [reduce using rule 68 (mulexpr2)]
    "for"        [reduce using rule 68 (mulexpr2)]
    "if"         [reduce using rule 68 (mulexpr2)]
    "let"        [reduce using rule 68 (mulexpr2)]
    "match"      [reduce using rule 68 (mulexpr2)]
    "new"        [reduce using rule 68 (mulexpr2)]
    "not"        [reduce using rule 68 (mulexpr2)]
    "true"       [reduce using rule 68 (mulexpr2)]
    "while"      [reduce using rule 68 (mulexpr2)]
    T_Id         [reduce using rule 68 (mulexpr2)]
    T_id         [reduce using rule 68 (mulexpr2)]
    T_integer    [reduce using rule 68 (mulexpr2)]
    T_real       [reduce using rule 68 (mulexpr2)]
    T_character  [reduce using rule 68 (mulexpr2)]
    T_string     [reduce using rule 68 (mulexpr2)]
    '+'          [reduce using rule 68 (mulexpr2)]
    '-'          [reduce using rule 68 (mulexpr2)]
    "+."         [reduce using rule 68 (mulexpr2)]
    "-."         [reduce using rule 68 (mulexpr2)]
    "("          [reduce using rule 68 (mulexpr2)]
    '!'          [reduce using rule 68 (mulexpr2)]
    $default     reduce using rule 68 (mulexpr2)

    letdef    go to state 69
    expr      go to state 94
    mulexpr2  go to state 95
    unop      go to state 71


State 58

   53 expr: T_id . mulexpr2
   55     | T_id . "[" expr mulexpr "]"

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "["          shift, and go to state 96
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    "begin"      [reduce using rule 68 (mulexpr2)]
    "delete"     [reduce using rule 68 (mulexpr2)]
    "dim"        [reduce using rule 68 (mulexpr2)]
    "false"      [reduce using rule 68 (mulexpr2)]
    "for"        [reduce using rule 68 (mulexpr2)]
    "if"         [reduce using rule 68 (mulexpr2)]
    "let"        [reduce using rule 68 (mulexpr2)]
    "match"      [reduce using rule 68 (mulexpr2)]
    "new"        [reduce using rule 68 (mulexpr2)]
    "not"        [reduce using rule 68 (mulexpr2)]
    "true"       [reduce using rule 68 (mulexpr2)]
    "while"      [reduce using rule 68 (mulexpr2)]
    T_Id         [reduce using rule 68 (mulexpr2)]
    T_id         [reduce using rule 68 (mulexpr2)]
    T_integer    [reduce using rule 68 (mulexpr2)]
    T_real       [reduce using rule 68 (mulexpr2)]
    T_character  [reduce using rule 68 (mulexpr2)]
    T_string     [reduce using rule 68 (mulexpr2)]
    '+'          [reduce using rule 68 (mulexpr2)]
    '-'          [reduce using rule 68 (mulexpr2)]
    "+."         [reduce using rule 68 (mulexpr2)]
    "-."         [reduce using rule 68 (mulexpr2)]
    "("          [reduce using rule 68 (mulexpr2)]
    '!'          [reduce using rule 68 (mulexpr2)]
    $default     reduce using rule 68 (mulexpr2)

    letdef    go to state 69
    expr      go to state 94
    mulexpr2  go to state 97
    unop      go to state 71


State 59

   43 expr: T_integer .

    $default  reduce using rule 43 (expr)


State 60

   44 expr: T_real .

    $default  reduce using rule 44 (expr)


State 61

   45 expr: T_character .

    $default  reduce using rule 45 (expr)


State 62

   46 expr: T_string .

    $default  reduce using rule 46 (expr)


State 63

   72 unop: '+' .

    $default  reduce using rule 72 (unop)


State 64

   73 unop: '-' .

    $default  reduce using rule 73 (unop)


State 65

   74 unop: "+." .

    $default  reduce using rule 74 (unop)


State 66

   75 unop: "-." .

    $default  reduce using rule 75 (unop)


State 67

   49 expr: "(" . ")"
   50     | "(" . expr ")"

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    ")"          shift, and go to state 98
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 99
    unop    go to state 71


State 68

   76 unop: '!' .

    $default  reduce using rule 76 (unop)


State 69

   60 expr: letdef . "in" expr

    "in"  shift, and go to state 100


State 70

   12 def: "mutable" T_id "[" expr . mulexpr "]"
   13    | "mutable" T_id "[" expr . mulexpr "]" ":" type
   52 expr: expr . binop expr

    "mod"  shift, and go to state 101
    '*'    shift, and go to state 102
    '/'    shift, and go to state 103
    "*."   shift, and go to state 104
    "/."   shift, and go to state 105
    '+'    shift, and go to state 106
    '-'    shift, and go to state 107
    "+."   shift, and go to state 108
    "-."   shift, and go to state 109
    '='    shift, and go to state 110
    "<>"   shift, and go to state 111
    '>'    shift, and go to state 112
    '<'    shift, and go to state 113
    "<="   shift, and go to state 114
    ">="   shift, and go to state 115
    "=="   shift, and go to state 116
    "!="   shift, and go to state 117
    "&&"   shift, and go to state 118
    "||"   shift, and go to state 119
    ';'    shift, and go to state 120
    "**"   shift, and go to state 121
    ","    shift, and go to state 122
    ":="   shift, and go to state 123

    $default  reduce using rule 16 (mulexpr)

    mulexpr  go to state 124
    binop    go to state 125


State 71

   51 expr: unop . expr

    "begin"      shift, and go to state 46
    "delete"     shift, and go to state 47
    "dim"        shift, and go to state 48
    "false"      shift, and go to state 49
    "for"        shift, and go to state 50
    "if"         shift, and go to state 51
    "let"        shift, and go to state 1
    "match"      shift, and go to state 52
    "new"        shift, and go to state 53
    "not"        shift, and go to state 54
    "true"       shift, and go to state 55
    "while"      shift, and go to state 56
    T_Id         shift, and go to state 57
    T_id         shift, and go to state 58
    T_integer    shift, and go to state 59
    T_real       shift, and go to state 60
    T_character  shift, and go to state 61
    T_string     shift, and go to state 62
    '+'          shift, and go to state 63
    '-'          shift, and go to state 64
    "+."         shift, and go to state 65
    "-."         shift, and go to state 66
    "("          shift, and go to state 67
    '!'          shift, and go to state 68

    letdef  go to state 69
    expr    go to state 126
    unop    go to state 71


State 72

   29 par: "(" T_id ":" . type ")"

    "array"  shift, and go to state 37
    "bool"   shift, and go to state 38
    "char"   shift, and go to state 39
    "float"  shift, and go to state 40
    "int"    shift, and go to state 41
    "unit"   shift, and go to state 42
    T_id     shift, and go to state 43
    "("      shift, and go to state 44

    type  go to state 127


State 73

    8 def: T_id mulpar "=" expr .
   52 expr: expr . binop expr

    "mod"  shift, and go to state 101
    '*'    shift, and go to state 102
    '/'    shift, and go to state 103
    "*."   shift, and go to state 104
    "/."   shift, and go to state 105
    '+'    shift, and go to state 106
    '-'    shift, and go to state 107
    "+."   shift, and go to state 108
    "-."   shift, and go to state 109
    '='    shift, and go to state 110
    "<>"   shift, and go to state 111
    '>'    shift, and go to state 112
    '<'    shift, and go to state 113
    "<="   shift, and go to state 114
    ">="   shift, and go to state 115
    "=="   shift, and go to state 116
    "!="   shift, and go to state 117
    "&&"   shift, and go to state 118
    "||"   shift, and go to state 119
    ';'    shift, and go to state 120
    "**"   shift, and go to state 121
    ":="   shift, and go to state 123

    $default  reduce using rule 8 (def)

    binop  go to state 125


State 74

    9 def: T_id mulpar ":" type . "=" expr
   36 type: type . "->" type
   37     | type . "ref"

    "ref"  shift, and go to state 83
    "="    shift, and go to state 128
    "->"   shift, and go to state 84


State 75

    7 muldef: "and" def muldef .

    $default  reduce using rule 7 (muldef)


State 76

   25 constr: T_Id "of" . type multype

    "array"  shift, and go to state 37
    "bool"   shift, and go to state 38
    "char"   shift, and go to state 39
    "float"  shift, and go to state 40
    "int"    shift, and go to state 41
    "unit"   shift, and go to state 42
    T_id     shift, and go to state 43
    "("      shift, and go to state 44

    type  go to state 129


State 77

   23 mulconstr: "|" . constr mulconstr

    T_Id  shift, and go to state 34

    constr  go to state 130


State 78

   21 tdef: T_id "=" constr mulconstr .

    $default  reduce using rule 21 (tdef)


State 79

   20 multdef: "and" tdef multdef .

    $default  reduce using rule 20 (multdef)


State 80

   38 type: "array" "of" . type

    "array"  shift, and go to state 37
    "bool"   shift, and go to state 38
    "char"   shift, and go to state 39
    "float"  shift, and go to state 40
    "int"    shift, and go to state 41
    "unit"   shift, and go to state 42
    T_id     shift, and go to state 43
    "("      shift, and go to state 44

    type  go to state 131


State 81

   39 type: "array" "[" . "*" muldim "]" "of" type

    "*"  shift, and go to state 132


State 82

   35 type: "(" type . ")"
   36     | type . "->" type
   37     | type . "ref"

    "ref"  shift, and go to state 83
    ")"    shift, and go to state 133
    "->"   shift, and go to state 84


State 83

   37 type: type "ref" .

    $default  reduce using rule 37 (type)


State 84

   36 type: type "->" . type
